@@ -1921,6 +1921,14 @@ x-directory/webdav-prefer-directory
 	short_list_application_ids_for_advanced_user_level=mozilla
 	category=System
 
+x-directory/vfolder-desktop
+	_description=folder
+	default_action_type=component
+	short_list_component_iids=OAFIID:Nautilus_File_Manager_Icon_View,OAFIID:Nautilus_File_Manager_List_View,OAFIID:Nautilus_Music_View
+	short_list_component_iids_for_novice_user_level=OAFIID:nautilus_file_manager_icon_view:42681b21-d5ca-4837-87d2-394d88ecc058,OAFIID:nautilus_file_manager_list_view:521e489d-0662-4ad7-ac3a-832deabe111c,OAFIID:nautilus_music_view:9456b5d2-60a8-407f-a56e-d561e1821391:OAFIID
+	short_list_component_iids_for_intermediate_user_level=OAFIID:nautilus_file_manager_icon_view:42681b21-d5ca-4837-87d2-394d88ecc058,OAFIID:nautilus_file_manager_list_view:521e489d-0662-4ad7-ac3a-832deabe111c,OAFIID:nautilus_music_view:9456b5d2-60a8-407f-a56e-d561e1821391
+	short_list_component_iids_for_advanced_user_level=OAFIID:nautilus_file_manager_icon_view:42681b21-d5ca-4837-87d2-394d88ecc058,OAFIID:nautilus_file_manager_list_view:521e489d-0662-4ad7-ac3a-832deabe111c,OAFIID:nautilus_music_view:9456b5d2-60a8-407f-a56e-d561e1821391
+
 x-special/device-block
 	_description=block device
 	icon_filename=i-harddisk
