@@ -1,3 +1,7 @@
+Thu May 30 09:32:41 2002  George Lebl <jirka@5z.com>
+
+	* gnome-vfs.keys.in: add x-directory/vfolder-desktop
+
 2002-05-29  Jody Goldberg <jody@gnome.org>
 
 	* gnome-vfs.keys.in : Add more categories.
